--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,15 @@ corePoolSize = 50;
 maxPoolSize = 200;
 queueCapacity = 50;
 
+#redis
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.post=6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+spring.cache.redis.time-to-live=360000000
+
+
 
