新增退出登录接口和修改个人密码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,10 @@ spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 spring.cache.redis.time-to-live=360000000
 
+#qiniu
+qiniu.oss.accessKey=kNqhFHefBKhT6n_Qvtv_E5eSjf4LTEN9bliiJZEc
+qiniu.oss.secretKey=_rgthypDcF900HyPkF4vxqLBHYKbXUdMRVuzsa_A
+qiniu.oss.bucket=gulch-blog
+
 
 
